software/branches/1.3RC/interfaces/iMesh/spec/iMesh_new.h


typedef struct iMesh_Instance_Private* iMesh_Instance;
void iMesh_getEntSetData(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set_handle, 
    const iBase_TagHandle tag_handle, 
    void* tag_value, 
    int* tag_value_allocated, 
    int* tag_value_size, 
    int* err  
);
void iMesh_getEntSetIntData(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set, 
    const iBase_TagHandle tag_handle, 
    int* out_data, 
    int* err  
);
void iMesh_getEntSetDblData(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set, 
    const iBase_TagHandle tag_handle, 
    double* out_data, 
    int* err  
);
void iMesh_getEntSetEHData(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set, 
    const iBase_TagHandle tag_handle, 
    iBase_EntityHandle* out_data, 
    int* err  
);
void iMesh_getAllEntSetTags(
    iMesh_Instance instance, 
    const iBase_EntitySetHandle entity_set_handle, 
    iBase_TagHandle** tag_handles, 
    int* tag_handles_allocated, 
    int* tag_handles_size, 
    int* err  
);
void iMesh_rmvEntSetTag(
    iMesh_Instance instance, 
    iBase_EntitySetHandle entity_set_handle, 
    const iBase_TagHandle tag_handle, 
    int* err  
);
void iMesh_setVtxCoord(
    iMesh_Instance instance, 
    iBase_EntityHandle vertex_handle, 
    const double x, 
    const double y, 
    const double z, 
    int* err  
);
void iMesh_createVtx(
    iMesh_Instance instance, 
    const double x, 
    const double y, 
    const double z, 
    iBase_EntityHandle* new_vertex_handle, 
    int* err  
);
void iMesh_createEnt(
    iMesh_Instance instance, 
    const int new_entity_topology, 
    const iBase_EntityHandle* lower_order_entity_handles, 
    const int lower_order_entity_handles_size, 
    iBase_EntityHandle* new_entity_handle,
    int* status, 
    int* err  
);
void iMesh_deleteEnt(
    iMesh_Instance instance, 
    iBase_EntityHandle entity_handle, 
    int* err  
);
void iMesh_getArrData(
    iMesh_Instance instance, 
    const iBase_EntityHandle* entity_handles, 
    const int entity_handles_size, 
    const iBase_TagHandle tag_handle, 
    void* tag_values, 
    int* tag_values_allocated, 
    int* tag_values_size, 
    int* err  
);
void iMesh_getIntArrData(
    iMesh_Instance instance, 
    const iBase_EntityHandle* entity_handles, 
    const int entity_handles_size, 
    const iBase_TagHandle tag_handle, 
    int** tag_values, 
    int* tag_values_allocated, 
    int* tag_values_size, 
    int* err  
);
void iMesh_getDblArrData(
    iMesh_Instance instance, 
    const iBase_EntityHandle* entity_handles, 
    const int entity_handles_size, 
    const iBase_TagHandle tag_handle, 
    double** tag_values, 
    int* tag_values_allocated, 
    int* tag_values_size, 
    int* err  
);
void iMesh_getEHArrData(
    iMesh_Instance instance, 
    const iBase_EntityHandle* entity_handles, 
    const int entity_handles_size, 
    const iBase_TagHandle tag_handle, 
    iBase_EntityHandle** tag_value, 
    int* tag_value_allocated, 
    int* tag_value_size, 
    int* err  
);
void iMesh_setArrData(
    iMesh_Instance instance, 
    const iBase_EntityHandle* entity_handles, 
    const int entity_handles_size, 
    const iBase_TagHandle tag_handle, 
    const void* tag_values, 
    const int tag_values_size, 
    int* err  
);
void iMesh_setIntArrData(
    iMesh_Instance instance, 
    const iBase_EntityHandle* entity_handles, 
    const int entity_handles_size, 
    const iBase_TagHandle tag_handle, 
    const int* tag_values, 
    const int tag_values_size, 
    int* err  
);
void iMesh_setDblArrData(
    iMesh_Instance instance, 
    const iBase_EntityHandle* entity_handles, 
    const int entity_handles_size, 
    const iBase_TagHandle tag_handle, 
    const double* tag_values, 
    const int tag_values_size, 
    int* err  
);
void iMesh_setEHArrData(
    iMesh_Instance instance, 
    const iBase_EntityHandle* entity_handles, 
    const int entity_handles_size, 
    const iBase_TagHandle tag_handle, 
    const iBase_EntityHandle* tag_values, 
    const int tag_values_size, 
    int* err  
);
void iMesh_rmvArrTag(
    iMesh_Instance instance, 
    const iBase_EntityHandle* entity_handles, 
    const int entity_handles_size, 
    const iBase_TagHandle tag_handle, 
    int* err  
);
void iMesh_getData(
    iMesh_Instance instance, 
    const iBase_EntityHandle entity_handle, 
    const iBase_TagHandle tag_handle, 
    void* tag_value, 
    int* tag_value_allocated, 
    int* tag_value_size, 
    int* err  
);
void iMesh_getIntData(
    iMesh_Instance instance, 
    const iBase_EntityHandle entity_handle, 
    const iBase_TagHandle tag_handle, 
    int* out_data, 
    int* err  
);