software/branches/1.3RC/interfaces/iMesh/examples/FindAdjacency/iMesh_iso.F03


     subroutine iMesh_getEntSetData ( instance, entity_set_handle, tag_handle, tag_value, tag_value_allocated, tag_value_size, &
          err ) 
       ! ,bind(C,name="iMesh_getEntSetData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_handle
       type(c_ptr), intent(in), value :: tag_handle
       type(c_ptr), intent(inout) :: tag_value
       integer(c_int), intent(inout) :: tag_value_allocated
       integer(c_int), intent(out) :: tag_value_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEntSetData

     subroutine iMesh_getEntSetIntData ( instance, entity_set, tag_handle, out_data, err ) 
       ! ,bind(C,name="iMesh_getEntSetIntData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set
       type(c_ptr), intent(in), value :: tag_handle
       integer(c_int), intent(out) :: out_data
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEntSetIntData

     subroutine iMesh_getEntSetDblData ( instance, entity_set, tag_handle, out_data, err ) 
       ! ,bind(C,name="iMesh_getEntSetDblData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set
       type(c_ptr), intent(in), value :: tag_handle
       real(c_double), intent(out) :: out_data
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEntSetDblData

     subroutine iMesh_getEntSetEHData ( instance, entity_set, tag_handle, out_data, err ) 
       ! ,bind(C,name="iMesh_getEntSetEHData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set
       type(c_ptr), intent(in), value :: tag_handle
       type(c_ptr), intent(out) :: out_data
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEntSetEHData

     subroutine iMesh_getAllEntSetTags ( instance, entity_set_handle, tag_handles, tag_handles_allocated, tag_handles_size, &
          err ) 
       ! ,bind(C,name="iMesh_getAllEntSetTags") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_handle
       type(c_ptr), intent(inout) :: tag_handles
       integer(c_int), intent(inout) :: tag_handles_allocated
       integer(c_int), intent(out) :: tag_handles_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getAllEntSetTags

     subroutine iMesh_rmvEntSetTag ( instance, entity_set_handle, tag_handle, err ) 
       ! ,bind(C,name="iMesh_rmvEntSetTag") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_set_handle
       type(c_ptr), intent(in), value :: tag_handle
       integer(c_int), intent(out) :: err
     end subroutine iMesh_rmvEntSetTag

     subroutine iMesh_setVtxCoord ( instance, vertex_handle, x, y, z, err ) 
       ! ,bind(C,name="iMesh_setVtxCoord") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: vertex_handle
       real(c_double), intent(in), value :: x
       real(c_double), intent(in), value :: y
       real(c_double), intent(in), value :: z
       integer(c_int), intent(out) :: err
     end subroutine iMesh_setVtxCoord

     subroutine iMesh_createVtx ( instance, x, y, z, new_vertex_handle, err ) 
       ! ,bind(C,name="iMesh_createVtx") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       real(c_double), intent(in), value :: x
       real(c_double), intent(in), value :: y
       real(c_double), intent(in), value :: z
       type(c_ptr), intent(out) :: new_vertex_handle
       integer(c_int), intent(out) :: err
     end subroutine iMesh_createVtx

     subroutine iMesh_createEnt ( instance, new_entity_topology, lower_order_entity_handles, lower_order_entity_handles_size, &
          new_entity_handle, status, err ) 
       ! ,bind(C,name="iMesh_createEnt") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       integer(c_int), intent(in), value :: new_entity_topology
       type(c_ptr), intent(in), value :: lower_order_entity_handles
       integer(c_int), intent(in), value :: lower_order_entity_handles_size
       type(c_ptr), intent(out) :: new_entity_handle
       integer(c_int), intent(out) :: status
       integer(c_int), intent(out) :: err
     end subroutine iMesh_createEnt

     subroutine iMesh_deleteEnt ( instance, entity_handle, err ) 
       ! ,bind(C,name="iMesh_deleteEnt") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       integer(c_int), intent(out) :: err
     end subroutine iMesh_deleteEnt

     subroutine iMesh_getArrData ( instance, entity_handles, entity_handles_size, tag_handle, &
          tag_values, tag_values_allocated, tag_values_size, err ) 
       ! ,bind(C,name="iMesh_getArrData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       type(c_ptr), intent(in), value :: tag_handle
       type(c_ptr), intent(inout) :: tag_values
       integer(c_int), intent(inout) :: tag_values_allocated
       integer(c_int), intent(out) :: tag_values_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getArrData

     subroutine iMesh_getIntArrData ( instance, entity_handles, entity_handles_size, tag_handle, &
          tag_values, tag_values_allocated, tag_values_size, err ) 
       ! ,bind(C,name="iMesh_getIntArrData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       type(c_ptr), intent(in), value :: tag_handle
       type(c_ptr), intent(inout) :: tag_values
       integer(c_int), intent(inout) :: tag_values_allocated
       integer(c_int), intent(out) :: tag_values_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getIntArrData

     subroutine iMesh_getDblArrData ( instance, entity_handles, entity_handles_size, tag_handle, &
          tag_values, tag_values_allocated, tag_values_size, err ) 
       ! ,bind(C,name="iMesh_getDblArrData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       type(c_ptr), intent(in), value :: tag_handle
       type(c_ptr), intent(inout) :: tag_values
       integer(c_int), intent(inout) :: tag_values_allocated
       integer(c_int), intent(out) :: tag_values_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getDblArrData

     subroutine iMesh_getEHArrData ( instance, entity_handles, entity_handles_size, tag_handle, &
          tag_values, tag_value_allocated, tag_value_size, err ) 
       ! ,bind(C,name="iMesh_getEHArrData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       type(c_ptr), intent(in), value :: tag_handle
       type(c_ptr), intent(inout) :: tag_values
       integer(c_int), intent(inout) :: tag_value_allocated
       integer(c_int), intent(out) :: tag_value_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getEHArrData

     subroutine iMesh_setArrData ( instance, entity_handles, entity_handles_size, tag_handle, tag_values, tag_values_size, &
          err ) 
       ! ,bind(C,name="iMesh_setArrData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       type(c_ptr), intent(in), value :: tag_handle
       character(len=tag_values_size), intent(in) :: tag_values
       integer(c_int), intent(in), value :: tag_values_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_setArrData

     subroutine iMesh_setIntArrData ( instance, entity_handles, entity_handles_size, tag_handle, tag_values, tag_values_size, &
          err ) 
       ! ,bind(C,name="iMesh_setIntArrData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       type(c_ptr), intent(in), value :: tag_handle
       integer(c_int), intent(in) :: tag_values
       integer(c_int), intent(in), value :: tag_values_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_setIntArrData

     subroutine iMesh_setDblArrData ( instance, entity_handles, entity_handles_size, tag_handle, tag_values, tag_values_size, &
          err ) 
       ! ,bind(C,name="iMesh_setDblArrData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       type(c_ptr), intent(in), value :: tag_handle
       real(c_double), intent(in) :: tag_values
       integer(c_int), intent(in), value :: tag_values_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_setDblArrData

     subroutine iMesh_setEHArrData ( instance, entity_handles, entity_handles_size, tag_handle, tag_values, tag_values_size, &
          err ) 
       ! ,bind(C,name="iMesh_setEHArrData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       type(c_ptr), intent(in), value :: tag_handle
       type(c_ptr), intent(in), value :: tag_values
       integer(c_int), intent(in), value :: tag_values_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_setEHArrData

     subroutine iMesh_rmvArrTag ( instance, entity_handles, entity_handles_size, tag_handle, &
          err ) 
       ! ,bind(C,name="iMesh_rmvArrTag") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handles
       integer(c_int), intent(in), value :: entity_handles_size
       type(c_ptr), intent(in), value :: tag_handle
       integer(c_int), intent(out) :: err
     end subroutine iMesh_rmvArrTag

     subroutine iMesh_getData ( instance, entity_handle, tag_handle, tag_value, tag_value_allocated, tag_value_size, &
          err ) 
       ! ,bind(C,name="iMesh_getData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       type(c_ptr), intent(in), value :: tag_handle
       type(c_ptr), intent(inout) :: tag_value
       integer(c_int), intent(inout) :: tag_value_allocated
       integer(c_int), intent(out) :: tag_value_size
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getData

     subroutine iMesh_getIntData ( instance, entity_handle, tag_handle, out_data, err ) 
       ! ,bind(C,name="iMesh_getIntData") 
       use iso_c_binding
       type(c_ptr), intent(in), value :: instance
       type(c_ptr), intent(in), value :: entity_handle
       type(c_ptr), intent(in), value :: tag_handle
       integer(c_int), intent(out) :: out_data
       integer(c_int), intent(out) :: err
     end subroutine iMesh_getIntData
